; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_tube.c_tube_queue_item.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_tube.c_tube_queue_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tube = type { i32, %struct.tube_res_list*, %struct.tube_res_list* }
%struct.tube_res_list = type { i64, %struct.tube_res_list*, i32* }

@.str = private unnamed_addr constant [31 x i8] c"out of memory for async answer\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tube_queue_item(%struct.tube* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.tube*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.tube_res_list*, align 8
  store %struct.tube* %0, %struct.tube** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load %struct.tube*, %struct.tube** %5, align 8
  %10 = icmp ne %struct.tube* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.tube*, %struct.tube** %5, align 8
  %13 = getelementptr inbounds %struct.tube, %struct.tube* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %11, %3
  store i32 0, i32* %4, align 4
  br label %66

17:                                               ; preds = %11
  %18 = call i64 @malloc(i32 24)
  %19 = inttoptr i64 %18 to %struct.tube_res_list*
  store %struct.tube_res_list* %19, %struct.tube_res_list** %8, align 8
  %20 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %21 = icmp ne %struct.tube_res_list* %20, null
  br i1 %21, label %26, label %22

22:                                               ; preds = %17
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @free(i32* %23)
  %25 = call i32 @log_err(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %66

26:                                               ; preds = %17
  %27 = load i32*, i32** %6, align 8
  %28 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %29 = getelementptr inbounds %struct.tube_res_list, %struct.tube_res_list* %28, i32 0, i32 2
  store i32* %27, i32** %29, align 8
  %30 = load i64, i64* %7, align 8
  %31 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %32 = getelementptr inbounds %struct.tube_res_list, %struct.tube_res_list* %31, i32 0, i32 0
  store i64 %30, i64* %32, align 8
  %33 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %34 = getelementptr inbounds %struct.tube_res_list, %struct.tube_res_list* %33, i32 0, i32 1
  store %struct.tube_res_list* null, %struct.tube_res_list** %34, align 8
  %35 = load %struct.tube*, %struct.tube** %5, align 8
  %36 = getelementptr inbounds %struct.tube, %struct.tube* %35, i32 0, i32 1
  %37 = load %struct.tube_res_list*, %struct.tube_res_list** %36, align 8
  %38 = icmp ne %struct.tube_res_list* %37, null
  br i1 %38, label %39, label %45

39:                                               ; preds = %26
  %40 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %41 = load %struct.tube*, %struct.tube** %5, align 8
  %42 = getelementptr inbounds %struct.tube, %struct.tube* %41, i32 0, i32 1
  %43 = load %struct.tube_res_list*, %struct.tube_res_list** %42, align 8
  %44 = getelementptr inbounds %struct.tube_res_list, %struct.tube_res_list* %43, i32 0, i32 1
  store %struct.tube_res_list* %40, %struct.tube_res_list** %44, align 8
  br label %49

45:                                               ; preds = %26
  %46 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %47 = load %struct.tube*, %struct.tube** %5, align 8
  %48 = getelementptr inbounds %struct.tube, %struct.tube* %47, i32 0, i32 2
  store %struct.tube_res_list* %46, %struct.tube_res_list** %48, align 8
  br label %49

49:                                               ; preds = %45, %39
  %50 = load %struct.tube_res_list*, %struct.tube_res_list** %8, align 8
  %51 = load %struct.tube*, %struct.tube** %5, align 8
  %52 = getelementptr inbounds %struct.tube, %struct.tube* %51, i32 0, i32 1
  store %struct.tube_res_list* %50, %struct.tube_res_list** %52, align 8
  %53 = load %struct.tube*, %struct.tube** %5, align 8
  %54 = getelementptr inbounds %struct.tube, %struct.tube* %53, i32 0, i32 2
  %55 = load %struct.tube_res_list*, %struct.tube_res_list** %54, align 8
  %56 = load %struct.tube*, %struct.tube** %5, align 8
  %57 = getelementptr inbounds %struct.tube, %struct.tube* %56, i32 0, i32 1
  %58 = load %struct.tube_res_list*, %struct.tube_res_list** %57, align 8
  %59 = icmp eq %struct.tube_res_list* %55, %58
  br i1 %59, label %60, label %65

60:                                               ; preds = %49
  %61 = load %struct.tube*, %struct.tube** %5, align 8
  %62 = getelementptr inbounds %struct.tube, %struct.tube* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = call i32 @comm_point_start_listening(i32 %63, i32 -1, i32 -1)
  br label %65

65:                                               ; preds = %60, %49
  store i32 1, i32* %4, align 4
  br label %66

66:                                               ; preds = %65, %22, %16
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @free(i32*) #1

declare dso_local i32 @log_err(i8*) #1

declare dso_local i32 @comm_point_start_listening(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
